nextcloud/nextcloud_headers.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
  namespace: nextcloud-deployment
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    customResponseHeaders:
      Strict-Transport-Security: "15552000"
      X-Frame-Options: SAMEORIGIN
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirects
  namespace: nextcloud-deployment
spec:
  redirectScheme:
    permanent: true
    scheme: https
  redirectRegex:
    regex: https://(.*)/.well-known/(card|cal)dav
    replacement: https://$1/remote.php/dav/
