nextcloud/nextcloud_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud-deployment
  labels:
    app: nextcloud
spec:
  ports:
    - port: 8090
  selector:
    app: nextcloud
