nextcloud/postgresql_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: nextcloud-deployment
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql
