nextcloud/redis_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud-deployment
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
